style correction: alignement

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -66,7 +66,8 @@ body{
     justify-content: center;
     align-items: center;
     max-width: 800px;
-    margin-top: 100px;
+    margin: 100px auto;
+
 }
 .card{
     text-align: left;
